--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
   "presets": [
-    "env",
-    "react"
+    "@babel/preset-env",
+    "@babel/preset-react"
   ],
   "plugins": [
-    "babel-plugin-transform-class-properties",
-    "babel-plugin-transform-object-rest-spread"
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-object-rest-spread"
   ]
 }
